--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Nmap Script Scan Report</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <style>
+    body {
+      background-color: #000;
+      color: #0ff;
+      font-family: monospace;
+      padding: 2rem;
+    }
+    a {
+      color: #0ff;
+    }
+  </style>
 </head>
 <body>
-  <h1>Nmap Script Scan Report</h1>
-  <p>Hasil imbasan menggunakan <code>-sC</code> untuk mengenal pasti maklumat lanjut seperti versi perkhidmatan dan potensi kelemahan.</p>
-  <a href="report/script-scan.txt" target="_blank">📄 Lihat Laporan Penuh</a>
+  <h1>Nmap Script Scan</h1>
+  <p>This project performs advanced script scanning using Nmap and generates detailed output logs.</p>
+  <p><a href="report/script-scan.txt" target="">View Scan Report</a></p>
 </body>
 </html>
