--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <p>This project demonstrates the use of <strong>Nmap scripting engine (NSE)</strong> to perform advanced network scanning and vulnerability assessment.</p>
     <p>The scan includes service detection and default script scanning to identify potential misconfigurations or exposed services.</p>
 
-    <a href="report/script-scan.txt" class="btn">📄 View Scan Report</a>
+    <a href="report/scan-result.txt" class="btn">📄 View Scan Report</a>
   </div>
 
   <footer>
